<resources>
    <string name="app_name">Freesky</string>
    <string name="title_activity_list_user">ListUserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>

    <!--retry ui stuff-->
    <string name="btn_text_retry">Retry</string>

    <!--product stuff-->
    <string name="view_text_email">Email:</string>
    <string name="view_text_followers">Followers:</string>
    <string name="view_text_description">Description:</string>

    <!--network exception message stuff-->
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve product data. Check your internet connection</string>

    <!-- Login Activity -->
    <string name="login_activity_main_title">Free Wi-fi for All.</string>
    <string name="login_activity_title_desc">Silahkan Masukkan nomor ponsel Anda atau Login untuk mendapatkan akses wi-fi.</string>
    <string name="login_activity_label_mobile_number">Your Mobile Number</string>
    <string name="login_activity_hint_mobile_number">ex: 081902908xxx</string>
    <string name="login_activity_button_login_facebook">Login with Facebook</string>

    <!-- Home Activity -->
    <string name="home_activity_button_layanan_pembayaran">LAYANAN PEMBAYARAN</string>

    <!-- Home Fragment -->
    <string name="fragment_home_label_deals">TOP DEALS</string>
    <string name="fragment_home_label_videos">TOP VIDEOS</string>
    <string name="fragment_home_label_entertainment">TOP ENTERTAINMENT</string>
    <string name="fragment_home_label_apps">TOP APPS</string>
    <string name="fragment_home_label_movies">MOVIES</string>
    <string name="fragment_home_label_music">MUSIC</string>
    <string name="fragment_home_button_all_music">View All</string>

    <!--dummy content stuff-->
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>

    <string-array name="user_photos">
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xpf1/t51.2885-15/s306x306/e15/10665483_429615813855717_1490926670_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10891026_694434897342602_1094773634_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10894920_1382218332084671_10354293_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10895429_768163716566132_692639371_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10903214_589111004559561_1485881959_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914479_770066599745785_704061869_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914587_1580079332227764_829762970_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10919231_605000369644967_1578007175_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10932142_330866587116424_1327271556_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10932410_1544715455813452_1107632347_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfp1/t51.2885-15/s306x306/e15/891516_579817258815508_1989379587_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/1922172_719849754801056_911351010_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10914370_1519297625009641_722250486_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903746_368501953321344_2002746420_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903270_1397263717236338_950192395_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903242_441936642627221_576882729_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899295_796858437028648_664655000_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899139_948470841831743_1406659049_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
    </string-array>

    <string name="user_profile_photo">http://lh3.googleusercontent.com/-qPlFj3K7iY8/AAAAAAAAAAI/AAAAAAAACY4/X5XFr4SPJV0/s120-c/photo.jpg</string>
    <string name="search_hint">Search product</string>
    <string name="menu_cart">cart</string>
    <string name="menu_search">Search</string>
    <string name="product_image_desc">Product Image</string>
    <string name="tv_grosir_value">Grosir</string>
    <string name="product_name">Product Name</string>
    <string name="iv_product_lucky_desc">Product lucky description</string>
    <string name="iv_product_gold_desc">Product gold description</string>
    <string name="loading_list_task">Please wait....</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_video">VideoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">Layanan Pembayaran</string>

    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>
