<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kulomady.freesky.view.activity.login.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/theme_bg_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:src="@drawable/freesky_logo_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/login_activity_main_title"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/login_activity_title_desc"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:text="@string/login_activity_label_mobile_number"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:hint="@string/login_activity_hint_mobile_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="13"
                android:background="@drawable/bg_edittext_transparent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/or_background"
                    android:scaleType="fitXY" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/login_activity_button_login_facebook"
                android:background="@color/blue_facebook"
                android:layout_weight="1" />

        </LinearLayout>

</ScrollView>
